HUDF-1293: Fix call status user name overflow into duration (Group Members tab), HUDF-1294: realign status message so it's not on new line, increase avatar size to fill up more of list row space (also group members tab)  @razlymiles

--- a/FJSHUD/app/styles/tables.less
+++ b/FJSHUD/app/styles/tables.less
@@ -82,6 +82,46 @@
   color: #729C00;
 }
 
+.GroupRow{
+  .Avatar{
+    width: 40px !important;
+    height: 40px !important;
+    img{
+      width: 38px !important;
+      height: 38px !important;
+    }
+  }
+  .WidgetHeaderCallStatus{
+    height: 40px;
+    margin-top: .5em;
+
+    .Avatar{
+      width: 30px !important;
+      height: 30px !important;
+      background: url("../img/XAvatarBorder.png") no-repeat -95px -95px !important;
+
+      img{
+        width: 28px !important;
+        height: 28px !important;
+        margin-left: 1px !important;
+        margin-top: 1px !important;
+      }
+    }
+    .CallLineTop{
+      margin-top: -5px;
+      width: 80px !important;
+
+      .CallerName{
+        width: 100%;
+      }
+    }
+    .CallDuration{
+      margin-top: -5px;
+      top: 11px !important;
+    }
+  }
+}
+
 .ListRow {
   position: relative;
   cursor: pointer;
@@ -279,9 +319,14 @@
     }
     }
   }
-  .GroupListRowTitle{
+  .GroupListRowTitleWidget{
     max-width: 100%;
+    padding-top: 10px;
     
+    .ListRowStatusIcon{
+      margin-left: 0px;
+    }
+
     .status_message{
     	-ms-overflow-x:none;
     	-ms-overflow-y: none;
@@ -289,6 +334,9 @@
     	overflow: hidden;
     	text-overflow: ellipsis;
     	white-space: nowrap;
+      display: inline-block;
+      vertical-align: middle;
+      margin-left: -2px;
     }
   }
   
